--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,5 @@
 h1{
-color: white;
+color: green;
 text-align: center;
 }
 
@@ -22,4 +22,12 @@ vertical-align:center;
 #centrage{
   width: 100em;
   height: 100em;
+}
+
+#matrix{
+	width:40em;
+	height:20em;
+margin-left: 29%;
+vertical-align:center;
+display:NONE
 }
